package net.civeira.phylax.features.document.template.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.document.template.domain.event.TemplateCreateEvent;
import net.civeira.phylax.features.document.template.domain.event.TemplateDeleteEvent;
import net.civeira.phylax.features.document.template.domain.event.TemplateDisableEvent;
import net.civeira.phylax.features.document.template.domain.event.TemplateEnableEvent;
import net.civeira.phylax.features.document.template.domain.event.TemplateEvent;
import net.civeira.phylax.features.document.template.domain.event.TemplateUpdateEvent;
import net.civeira.phylax.features.document.template.domain.valueobject.ChannelVO;
import net.civeira.phylax.features.document.template.domain.valueobject.CodeVO;
import net.civeira.phylax.features.document.template.domain.valueobject.EnabledVO;
import net.civeira.phylax.features.document.template.domain.valueobject.TenantVO;
import net.civeira.phylax.features.document.template.domain.valueobject.ThemeVO;
import net.civeira.phylax.features.document.template.domain.valueobject.UidVO;
import net.civeira.phylax.features.document.template.domain.valueobject.VersionVO;

/**
 * template
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class Template implements TemplateRef {

  /**
   * Prepare a new template with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new template
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed template.
   */
  public static Template create(final TemplateChangeSet change) throws ConstraintException {
    change.enabled(true);
    Template instance = new Template(change, Optional.empty());
    instance.addEvent(TemplateCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El channel de template
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private ChannelVO channelValue;

  /**
   * LOGIN_MAGIC_LINK, RESET_PASSWORD, page.profile...
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private CodeVO codeValue;

  /**
   * El enabled de template
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private EnabledVO enabledValue = EnabledVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<TemplateEvent> recordedEvents = List.of();

  /**
   * null = global, valor = override por tenant
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TenantVO tenantValue = TenantVO.nullValue();

  /**
   * Nombre del theme layout (full-window, index-page...). Resuelto contra el tenant activo en
   * render time.
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private ThemeVO themeValue = ThemeVO.nullValue();

  /**
   * El uid de template
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * Campo con el número de version de template para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private Template(final TemplateChangeSet attribute, final Optional<Template> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.codeValue = attribute.readCode(previous, list);
    this.tenantValue = attribute.readTenant(previous, list);
    this.themeValue = attribute.readTheme(previous, list);
    this.channelValue = attribute.readChannel(previous, list);
    this.enabledValue = attribute.readEnabled(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on Template", list);
    }
    this.recordedEvents = previous.map(Template::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a template
   *
   * @autogenerated EntityGenerator
   * @return A instance of template ready to be deleted
   */
  public Template delete() {
    Template instance = new Template(new TemplateChangeSet(), Optional.of(this));
    instance.addEvent(TemplateDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * Apply disable on template.
   *
   * @autogenerated EntityGenerator
   * @return A modified instance of template
   */
  public Template disable() {
    TemplateChangeSet attr = new TemplateChangeSet();
    attr.enabled(false);
    Template instance = new Template(attr, Optional.of(this));
    instance.addEvent(TemplateDisableEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * Apply enable on template.
   *
   * @autogenerated EntityGenerator
   * @return A modified instance of template
   */
  public Template enable() {
    TemplateChangeSet attr = new TemplateChangeSet();
    attr.enabled(true);
    Template instance = new Template(attr, Optional.of(this));
    instance.addEvent(TemplateEnableEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(7);
    uidToMap(map);
    codeToMap(map);
    tenantToMap(map);
    themeToMap(map);
    channelToMap(map);
    enabledToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a template
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of template
   */
  public Template update(final TemplateChangeSet change) throws ConstraintException {
    change.unsetEnabled();
    Template instance = new Template(change, Optional.of(this));
    instance.addEvent(TemplateUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Template withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final TemplateEvent event) {
    List<TemplateEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
