package net.civeira.phylax.features.document.templateasset.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.document.templateasset.domain.event.TemplateAssetCreateEvent;
import net.civeira.phylax.features.document.templateasset.domain.event.TemplateAssetDeleteEvent;
import net.civeira.phylax.features.document.templateasset.domain.event.TemplateAssetDisableEvent;
import net.civeira.phylax.features.document.templateasset.domain.event.TemplateAssetEnableEvent;
import net.civeira.phylax.features.document.templateasset.domain.event.TemplateAssetEvent;
import net.civeira.phylax.features.document.templateasset.domain.event.TemplateAssetUpdateEvent;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.CodeVO;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.ContentVO;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.EnabledVO;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.TemplateVO;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.TenantVO;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.TypeVO;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.UidVO;
import net.civeira.phylax.features.document.templateasset.domain.valueobject.VersionVO;

/**
 * template-asset
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class TemplateAsset implements TemplateAssetRef {

  /**
   * Prepare a new template asset with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new template asset
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed template asset.
   */
  public static TemplateAsset create(final TemplateAssetChangeSet change)
      throws ConstraintException {
    change.enabled(true);
    TemplateAsset instance = new TemplateAsset(change, Optional.empty());
    instance.addEvent(TemplateAssetCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * logo, background, corporate.css...
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private CodeVO codeValue;

  /**
   * El content de template asset
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private ContentVO contentValue;

  /**
   * El enabled de template asset
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private EnabledVO enabledValue = EnabledVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<TemplateAssetEvent> recordedEvents = List.of();

  /**
   * El template de template asset
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TemplateVO templateValue;

  /**
   * null = asset global del template. Valor = override por tenant (logo distinto por tenant en
   * template global).
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TenantVO tenantValue = TenantVO.nullValue();

  /**
   * IMAGE, CSS, FONT...
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TypeVO typeValue;

  /**
   * El uid de template asset
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * Campo con el número de version de template asset para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private TemplateAsset(final TemplateAssetChangeSet attribute,
      final Optional<TemplateAsset> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.templateValue = attribute.readTemplate(previous, list);
    this.tenantValue = attribute.readTenant(previous, list);
    this.codeValue = attribute.readCode(previous, list);
    this.typeValue = attribute.readType(previous, list);
    this.contentValue = attribute.readContent(previous, list);
    this.enabledValue = attribute.readEnabled(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on TemplateAsset", list);
    }
    this.recordedEvents = previous.map(TemplateAsset::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a template asset
   *
   * @autogenerated EntityGenerator
   * @return A instance of template asset ready to be deleted
   */
  public TemplateAsset delete() {
    TemplateAsset instance = new TemplateAsset(new TemplateAssetChangeSet(), Optional.of(this));
    instance.addEvent(TemplateAssetDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * Apply disable on template asset.
   *
   * @autogenerated EntityGenerator
   * @return A modified instance of template asset
   */
  public TemplateAsset disable() {
    TemplateAssetChangeSet attr = new TemplateAssetChangeSet();
    attr.enabled(false);
    TemplateAsset instance = new TemplateAsset(attr, Optional.of(this));
    instance.addEvent(TemplateAssetDisableEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * Apply enable on template asset.
   *
   * @autogenerated EntityGenerator
   * @return A modified instance of template asset
   */
  public TemplateAsset enable() {
    TemplateAssetChangeSet attr = new TemplateAssetChangeSet();
    attr.enabled(true);
    TemplateAsset instance = new TemplateAsset(attr, Optional.of(this));
    instance.addEvent(TemplateAssetEnableEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(8);
    uidToMap(map);
    templateToMap(map);
    tenantToMap(map);
    codeToMap(map);
    typeToMap(map);
    contentToMap(map);
    enabledToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a template asset
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of template asset
   */
  public TemplateAsset update(final TemplateAssetChangeSet change) throws ConstraintException {
    change.unsetEnabled();
    TemplateAsset instance = new TemplateAsset(change, Optional.of(this));
    instance.addEvent(TemplateAssetUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public TemplateAsset withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final TemplateAssetEvent event) {
    List<TemplateAssetEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
